Dynamic text-shadow for code block to ensure readability

--- a/components/container/_code-block.scss
+++ b/components/container/_code-block.scss
@@ -9,7 +9,7 @@
                 background-color: transparent;
 
                 code {
-                        text-shadow: 0 .5px $mutedBaseColor; //TODO: Dynamic
+                        text-shadow: 0 .5px $baseColor;
                         display: block;
                         // white-space: pre;
                         white-space: pre-wrap;
